@@ -542,6 +542,7 @@ linux (5.10.21-1) UNRELEASED; urgency=medium
 
   [ Salvatore Bonaccorso ]
   * Bump ABI to 5
+  * [rt] Refresh "printk: remove logbuf_lock"
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 05 Mar 2021 17:46:35 +0100
 
